[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "eu_country_codes"
dist-name = "pyeucountrycodes"
author = "Jürgen Gmach"
author-email = "juergen.gmach@googlemail.com"
description-file = "README.md"
home-page = "https://github.com/jugmac00/pyeucountrycodes"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

