[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "eu_country_codes"
dist-name = "pyeucountrycodes"
author = "Jürgen Gmach"
author-email = "juergen.gmach@googlemail.com"
description-file = "README.md"
home-page = "https://github.com/jugmac00/pyeucountrycodes"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    ]
requires-python = "=>3.6"
